@@ -355,7 +355,7 @@
         </blockquote>
 
         <h4>
-          Mac OS X
+          macOS
         </h4>
 
         <blockquote>
@@ -1471,7 +1471,7 @@
       <p>
         A graphical tool, called <i><b>poEdit</b></i> (<a href=
         "http://www.poedit.net/">http://www.poedit.net/</a>), is
-        available for Linux, Windows and Mac&nbsp;OS&nbsp;X.
+        available for Linux, Windows and macOS.
       </p>
 
       <p>
