@@ -538,7 +538,7 @@
           </dd>
 
           <dt>
-            Mac OS X
+            macOS
           </dt>
 
           <dd>
