@@ -115,7 +115,7 @@
       </blockquote>
 
       <h2>
-        Mac&nbsp;OS&nbsp;X Users
+        macOS Users
       </h2>
 
       <blockquote>
@@ -389,7 +389,7 @@
             the <b>[Alt]</b> modifier key is being held. (This is
             typically used for providing a print dialog, similar to
             when pressing <b>[Alt]</b>+'Print' in Windows and
-            Mac&nbsp;OS&nbsp;X.)
+            macOS.)
           </p>
 
           <p>
