@@ -2093,24 +2093,24 @@
       "<code>docs</code>" folder/directory) include:
       <ul>
         <li>
-          <a href="../magic-docs/html/">"Magic" Tool Documentation
+          <a href="../magic-docs/html/index.html">"Magic" Tool Documentation
           ("magic-docs")</a><br>
           Documentation for each of the currently-installed "Magic"
           tools.
         </li>
 
         <li>
-          <a href="../AUTHORS.txt">AUTHORS.txt</a><br>
+          <a href="../../AUTHORS.txt">AUTHORS.txt</a><br>
           List of authors and contributors.
         </li>
 
         <li>
-          <a href="../CHANGES.txt">CHANGES.txt</a><br>
+          <a href="../../CHANGES.txt">CHANGES.txt</a><br>
           Summary of changed between releases.
         </li>
 
         <li>
-          <a href="../COPYING.txt">COPYING.txt</a><br>
+          <a href="../../COPYING.txt">COPYING.txt</a><br>
           Copying license (The GNU General Public License).
         </li>
 
