@@ -13,6 +13,9 @@ $Id$
     ---------------------
     * Expanded the steps for making and posting releases.
 
+    * Mended some broken relative links in README.html that
+      pointed to other parts of the docs.
+
 2020.December.27 (0.9.25)
   * New Features
     ------------
